--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -8,6 +8,9 @@
     box-sizing: border-box;
 }
 
+@media screen and (min-width: 500px) {.img{ font-size: 42px;}}
+@media screen and (max-width: 499px) {.img{ font-size: 8.4vw;}}
+
 .box{
     display: flex;
     flex-wrap: wrap;
